Add cache tag to assets

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "icons";
-	src: url("/font.woff") format("woff");
+	src: url("/font.woff?201809121") format("woff");
 }
 * {
 	margin: 0;
